--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.
  
 Authors in chronological order of contribution:
 Tim Riedel
-Author 2
+Ethan Durham
  
 Further Information:
 http://diystream.cns.utexas.edu/
@@ -17,7 +17,10 @@ Timothy Riedel
 triedel@utexas.edu
  
 Brief Description of Goal of Code:
-blah, blah, blah,
+This code is meant to operate as a web-based diagnostic app, utilizing HTML, CSS, and JavaScript.
+The user is presented with a series of Yes/No questions to determine if their injury-related symptoms are more
+consistent with an ankle sprain or fracture. However, it should be noted that this code IS NOT designed
+to diagnose any medical conditions.
  
 Known Issues:
 blah, blah, blah, blah
