Removing Image Dimensions
Deleted height and width specified in line 112. This will be a test to see if the image is functionally resizable based on the style code.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ img, object{
 	<h1>Sprain or Fracture?</h1>
 </div>
 <!--Inputting Image-->
-<img src="https://sa1s3optim.patientpop.com/assets/images/provider/photos/2085240.jpg" alt="Ankle" width="500" height="333">
+<img src="https://sa1s3optim.patientpop.com/assets/images/provider/photos/2085240.jpg" alt="Ankle">
 	
 <div id="content" class="w3-container">
 	<p>Are you feeling like you might have an ankle sprain but wonder if it could be a fracture? Answer a few short questions to help you find out!</p>
