Updated Known Issues & Comments
Updated lines 25–27 (Known Issues), and added comments throughout HTML code. These comments are intended to read like a book, explaining what a body of HTML code does for the app.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
  
 THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.
  
- 
 Authors in chronological order of contribution:
 Tim Riedel
 Ethan Durham
@@ -23,15 +22,16 @@ consistent with an ankle sprain or fracture. However, it should be noted that th
 to diagnose any medical conditions.
  
 Known Issues:
-blah, blah, blah, blah
+Only six questions are asked to the user to diagnose if the ankle injury is a sprain or fracture.
+Alert pops up after every question and answer but does not specify to which (sprain or fracture) the answer contributes.
 Ignore this error message if you see it using the javaScript console: Error with Permissions-Policy header: Origin trial controlled feature not enabled: 'interest-cohort'.
 
-References (code):
+References (code-related):
 https://www.w3schools.com/w3css/default.asp
 https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-file
 https://www.w3schools.com/tags/tag_img.asp
 
-References (sprain vs. fracture):
+References (Sprain vs. Fracture):
 https://www.webmd.com/a-to-z-guides/ankle-sprain-vs-broken-ankle
 https://www.footanklecenters.com/blog/how-to-tell-the-difference-between-an-ankle-sprain-and-a-fracture
 
@@ -46,7 +46,6 @@ https://www.footanklecenters.com/blog/how-to-tell-the-difference-between-an-ankl
 </head> 
 
 <script>
-
 	//initialize count variables and set to 0.
 	var sprain_count = 0;
         var fracture_count = 0;
@@ -104,10 +103,12 @@ img, object{
 	
 </style>
 
+<!--The page(s) content is below-->
 <body>
 <div id="header" class="w3-container w3-flat-carrot">
 	<h1>Sprain or Fracture?</h1>
 </div>
+
 <!--Inputting Image-->
 <img src="https://sa1s3optim.patientpop.com/assets/images/provider/photos/2085240.jpg" alt="Ankle">
 	
